# Dropics

./: .gitignore  BACKEND_CHECKLIST.md  IMPLEMENTATION_COMPLETE.md  README.md  middleware.ts  package.json  pnpm-lock.yaml  tailwind.config.ts
.github/workflows/: ci-cd.yml
__tests__/unit/: products.test.ts
app/: globals.css  layout.tsx  page.tsx
app/(auth)/: layout.tsx
app/(auth)/forgot-password/: page.tsx
app/(auth)/reset-password/: page.tsx
app/(auth)/signin/: page.tsx
app/(checkout)/: layout.tsx
app/about/: page.tsx
app/accessibility/: page.tsx
app/account/: page.tsx
app/blog/: page.tsx
app/careers/: page.tsx
app/cart/: page.tsx
app/certifications/: page.tsx
app/contact/: page.tsx
app/cookies/: page.tsx
app/faq/: page.tsx
app/inspiration/: page.tsx
app/privacy/: page.tsx
app/products/: page.tsx
app/returns/: page.tsx
app/shipping/: page.tsx
app/sitemap/: page.tsx
app/submit-creation/: page.tsx
app/terms/: page.tsx
app/tutorials/: page.tsx
app/wholesale/: page.tsx
components/: account-nav.tsx  checkout-progress.tsx  crypto-checkout.tsx  crypto-pay-button.tsx  feature-section.tsx  footer.tsx  header.tsx  hero-section.tsx  icons.tsx  mega-menu.tsx  newsletter-signup.tsx  product-showcase.tsx  solana-pay-button.tsx  stripe-checkout.tsx  testimonial-section.tsx
contexts/: auth-context.tsx
database/: rls-policies.sql  schema.sql
docs/: API.md  DEPLOYMENT.md  DEVELOPMENT.md
lib/: auth-middleware.ts  solana-utils.ts  supabase.ts  types.ts
rust-solana/: Cargo.toml
rust-solana/src/: lib.rs
(+60 files in other folders)
