[package]
name = "dropics-solana"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-sdk = "1.18"
solana-client = "1.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"
base64 = "0.21"
bs58 = "0.5"
hex = "0.4"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
